--- a/withflexgrid.html
+++ b/withflexgrid.html
@@ -1,1 +1,46 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>RESPONSIVE WITH FLEX AND GRID</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body> 
+  <nav> 
+    <a href="#">HOME</a> 
+    <a href="#">ABOUT</a> 
+    <a href="#">SERVICES</a> 
+    <a href="#">CONTACT</a> 
+  </nav> 
+  <main> 
+    <img src="https://images.unsplash.com/photo-1499914485622-a88fac536970?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NjA4NzAyNjZ8&ixlib=rb-4.1.0&q=80&w=400">       <aside> 
+    <div> 
+      <h5>Membership<h5> 
+      <h1>$199/mo</h1> 
+      <button>Buy Now</button> 
+    </div> 
+    <div> 
+      <h5>Pro Membership<h5> 
+      <h1>$299/mo</h1> 
+      <button>Buy Now</button> 
+    </div> 
+    </aside> 
+  </main> 
+ <section> 
+   <div> 
+     <h5>Analytics</h5> 
+     <p> Lorem ipsum dolor,sit amet consectetur adipisicing elit.Fugiat eos nulla maiores illo.Labore,est. </p> 
+   </div> 
+   <div> 
+     <h5>Marketing</h5> 
+     <p> Lorem ipsum dolor,sit amet consectetur adipisicing elit.Fugiat eos nulla maiores illo.Labore,est. </p> 
+   </div> 
+   <div> 
+     <h5>Development</h5>
+     <p> Lorem ipsum dolor,sit amet consectetur adipisicing elit.Fugiat eos nulla maiores illo.Labore,est. </p> 
+   </div> 
+   <div> 
+     <h5>Support</h5> 
+     <p> Lorem ipsum dolor,sit amet consectetur adipisicing elit.Fugiat eos nulla maiores illo.Labore,est. </p>
+    </div> 
+ </section> 
+</html>  
