--- a/withflexgrid.html
+++ b/withflexgrid.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>RESPONSIVE WITH FLEX AND GRID</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="withflexgrid.css" />
   </head>
   <body> 
   <nav> 
