--- a/withflexgrid.html
+++ b/withflexgrid.html
@@ -12,7 +12,8 @@
     <a href="#">CONTACT</a> 
   </nav> 
   <main> 
-    <img src="https://images.unsplash.com/photo-1499914485622-a88fac536970?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3NjA4NzAyNjZ8&ixlib=rb-4.1.0&q=80&w=400">       <aside> 
+    <img src="https://raw.githubusercontent.com/karshitha17/responsive-withflexgrid/main/laptop.jpeg">       
+    <aside> 
     <div> 
       <h5>Membership<h5> 
       <h1>$199/mo</h1> 
